@@ -161,72 +161,52 @@
                         </control>
                     </focusedlayout>
                     <itemlayout height="268" width="189" condition="Container.Content(movies) + Skin.HasSetting(usecasesinfowall)">
-                        <control type="group">
-                            <posy>-6</posy>
                             <control type="image">
                                 <posx>9</posx>
-                                <posy>36</posy>
+                                <posy>30</posy>
                                 <width>150</width>
                                 <height>225</height>
                                 <aspectratio scalediffuse="false">stretch</aspectratio>
                                 <texture background="true" diffuse="thumbs/boxes/case_mask.png">$VAR[ListPosterVar]</texture>
                             </control>
                             <control type="image">
-                                <posx>-6</posx>
-                                <posy>-6</posy>
-                                <width>177</width>
-                                <height>280</height>
-                                <aspectratio scalediffuse="false">stretch</aspectratio>
-                                <texture>thumbs/boxes/case_overlay.png</texture>
-                            </control>
-                            <control type="image">
-                                <posx>-16</posx>
-                                <posy>13</posy>
-                                <width>182</width>
+                                <posx>-20</posx>
+                                <posy>7</posy>
+                                <width>189</width>
                                 <height>257</height>
                                 <aspectratio scalediffuse="false">stretch</aspectratio>
                                 <texture>thumbs/boxes/tvshows/$VAR[GlobalCaseVar]</texture>
                             </control>
                             <control type="image">
                                 <posx>106</posx>
-                                <posy>36</posy>
+                                <posy>31</posy>
                                 <width>52</width>
                                 <height>52</height>
                                 <include>OverlayVisibility0</include>
                             </control>
-                        </control>
                     </itemlayout>
                     <focusedlayout height="268" width="189" condition="Container.Content(movies) + Skin.HasSetting(usecasesinfowall)">
                         <control type="group">
-                            <posy>-6</posy>
-                            <animation effect="zoom" center="58,93" start="100" end="110" time="200" tween="quadratic" reversible="false">Focus</animation>
+                            <animation effect="zoom" center="90,134" start="100" end="110" time="200" tween="cubic" reversible="false">Focus</animation>
                             <control type="image">
                                 <posx>9</posx>
-                                <posy>36</posy>
+                                <posy>30</posy>
                                 <width>150</width>
                                 <height>225</height>
                                 <aspectratio scalediffuse="false">stretch</aspectratio>
                                 <texture background="true" diffuse="thumbs/boxes/case_mask.png">$VAR[ListPosterVar]</texture>
                             </control>
                             <control type="image">
-                                <posx>-6</posx>
-                                <posy>-6</posy>
-                                <width>177</width>
-                                <height>280</height>
-                                <aspectratio scalediffuse="false">stretch</aspectratio>
-                                <texture>thumbs/boxes/case_overlay.png</texture>
-                            </control>
-                            <control type="image">
-                                <posx>-16</posx>
-                                <posy>13</posy>
-                                <width>182</width>
+                                <posx>-20</posx>
+                                <posy>7</posy>
+                                <width>189</width>
                                 <height>257</height>
                                 <aspectratio scalediffuse="false">stretch</aspectratio>
                                 <texture>thumbs/boxes/tvshows/$VAR[GlobalCaseVar]</texture>
                             </control>
                             <control type="image">
                                 <posx>106</posx>
-                                <posy>36</posy>
+                                <posy>31</posy>
                                 <width>52</width>
                                 <height>52</height>
                                 <include>OverlayVisibility0</include>
