@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <window>
     <allowoverlay>no</allowoverlay>
-    <defaultcontrol always="false">101</defaultcontrol>
     <coordinates>
         <system>1</system>
         <posx>0</posx>
@@ -9,6 +8,14 @@
     </coordinates>
     <controls>
         <control type="group">
+			<control type="image" id="299">
+				<description>list</description>
+				<posx>0</posx>
+				<posy>0</posy>
+				<width>0</width>
+				<height>0</height>
+				<texture>-</texture>
+			</control>
             <control type="image">
                 <texture flipy="true">views/lowlist_panelback.png</texture>
                 <width>1920</width>
@@ -44,10 +51,10 @@
                 <animation effect="fade" time="1000" delay="400">WindowOpen</animation>
                 <animation effect="fade" time="200">WindowClose</animation>
             </control>
-            <control type="spincontrolex" id="101">
-                <posx>1425</posx>
+            <control type="spincontrol" id="101">
+                <posx>1800</posx>
                 <posy>6</posy>
-                <height>62</height>
+                <height>98</height>
                 <textcolor>grey</textcolor>
                 <spinposx>-4</spinposx>
                 <textoffsetx>0</textoffsetx>
@@ -57,6 +64,8 @@
                 <ondown>101</ondown>
                 <onup>101</onup>
                 <visible>Control.IsVisible(100)</visible>
+        <spinwidth>60</spinwidth>
+        <spinheight>92</spinheight>
                 <animation effect="fade" time="1000">WindowOpen</animation>
                 <animation effect="fade" time="200">WindowClose</animation>
             </control>
@@ -130,10 +139,10 @@
                     </control>
                 </focusedlayout>
             </control>
-            <control type="spincontrolex" id="111">
-                <posx>1425</posx>
+            <control type="spincontrol" id="111">
+                <posx>1800</posx>
                 <posy>6</posy>
-                <height>62</height>
+                <height>98</height>
                 <textcolor>grey</textcolor>
                 <spinposx>-4</spinposx>
                 <textoffsetx>0</textoffsetx>
@@ -142,11 +151,13 @@
                 <onright>110</onright>
                 <ondown>110</ondown>
                 <onup>110</onup>
-                <visible>Control.IsVisible(110)</visible>
+         <spinwidth>60</spinwidth>
+        <spinheight>92</spinheight>
+               <visible>Control.IsVisible(110)</visible>
                 <animation effect="fade" time="1000">WindowOpen</animation>
                 <animation effect="fade" time="200">WindowClose</animation>
             </control>
-            <control type="label" id="2">
+            <control type="label">
                 <posx>82</posx>
                 <posy>150</posy>
                 <width>1754</width>
@@ -209,10 +220,10 @@
                     </control>
                 </focusedlayout>
             </control>
-            <control type="spincontrolex" id="121">
-                <posx>1425</posx>
+            <control type="spincontrol" id="121">
+                <posx>1800</posx>
                 <posy>6</posy>
-                <height>62</height>
+                <height>98</height>
                 <textcolor>grey</textcolor>
                 <spinposx>-4</spinposx>
                 <textoffsetx>0</textoffsetx>
@@ -222,6 +233,8 @@
                 <ondown>120</ondown>
                 <onup>120</onup>
                 <visible>Control.IsVisible(120)</visible>
+        <spinwidth>60</spinwidth>
+        <spinheight>92</spinheight>
                 <animation effect="fade" time="1000">WindowOpen</animation>
                 <animation effect="fade" time="200">WindowClose</animation>
             </control>
