@@ -1,3 +1,8 @@
+[B]4.0.9[/B]
+- Removed image
+- New Aeon Nox logo.
+- Several fixes --> https://github.com/BigNoid/Aeon-Nox/commits/master
+
 [B]4.0.8[/B]
 - Updated language files from Transifex
 
